[project]
name = "propel-client"
version = "v0.0.21"
description = "Propel service client"
authors = [{ name = "Yuri Turchenkov", email = "yuri.turchenkov@valory.xyz" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.0,<9",
    "requests",
    "open-autonomy==0.21.22",
    "multiaddr==0.0.9",
    "pymultihash==0.8.2",
]

[project.scripts]
propel = "propel_client:cli.cli"

[dependency-groups]
dev = [
    "tomte[black, flake8, isort, mypy, pylint]==0.6.1",
    "types-requests",
    "tox>=3.0,<4",
    "pytest",
    "pytest-coverage>=0.0,<0.1",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["propel_client"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"


[tool.pylint.basic]
good-names = ["e"]
