[project]
name = "propel-client"
version = "v0.0.21"
description = "Propel service client"
authors = [{ name = "Yuri Turchenkov", email = "yuri.turchenkov@valory.xyz" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.0,<9",
    "requests",
    "open-autonomy==0.21.22",
]

[project.scripts]
propel = "propel_client:cli.cli"

[dependency-groups]
dev = [
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@v0.7.0",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.tomte]
# No packages/ dir — propel-client is a pure-Python library. Pointed at
# the source tree so tomte's canonical setenv injects a real path, even
# though no AEA-specific testenv (check-packages, check-abci, ...) is
# consumed here.
packages_paths = "propel_client"
service_specific_packages = ["propel_client"]
pytest_targets = ["tests"]
open_autonomy_version = "0.21.22"
open_aea_version = "2.2.6"
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@v0.7.0"
pylint_disables = [
    "too-many-positional-arguments",
    "too-many-arguments",
    "too-many-lines",
    # C0411: tomte canonical isort.cfg pins known_first_party=autonomy, so
    # isort orders propel_client.* as third-party while pylint's
    # is_local_module heuristic treats it as first-party. Same pattern
    # mech-client carries.
    "C0411",
]

[tool.uv.build-backend]
module-name = ["propel_client"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"


[tool.pylint.basic]
good-names = ["e"]
